@@ -1,26 +1,40 @@
 plugins {
     id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 group 'io.github.tanialx'
-version '0.0.1-SNAPSHOT'
-
-javafx {
-    version = "17"
-    modules = [ 'javafx.controls' ]
-    configuration = 'compileOnly'
-}
+version '0.0.1'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
+    implementation 'com.squareup:javapoet:1.13.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'com.google.testing.compile:compile-testing:0.17'
+    testImplementation "org.openjfx:javafx-base:17:win"
+    testImplementation "org.openjfx:javafx-controls:17:win"
+    testImplementation "org.openjfx:javafx-graphics:17:win"
 }
 
 test {
     useJUnitPlatform()
+    doFirst {
+        jvmArgs = [
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+        ]
+    }
+}
+
+publishing {
+    publications {
+        jfxooPub(MavenPublication) {
+            from components.java
+        }
+    }
 }
